// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compute the data for a Process Behavior Chart Allows to change the baseline size 1`] = `
[
  [
    "Average",
    "Lower limit",
    "Upper limit",
    "Rule 1",
    "Rule 2",
    "Rule 3",
  ],
  [
    1.5,
    -1.1595744680851068,
    4.159574468085107,
    "",
    "",
    "",
  ],
  [
    1.5,
    -1.1595744680851068,
    4.159574468085107,
    "",
    "",
    "",
  ],
  [
    1.5,
    -1.1595744680851068,
    4.159574468085107,
    "",
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Directly with an array of values 1`] = `
[
  [
    "Average",
    "Lower limit",
    "Upper limit",
    "Rule 1",
    "Rule 2",
    "Rule 3",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.4,
    82.4,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.6,
    81.6,
    81.6,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.7,
    81.7,
    81.7,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.7,
    81.7,
    81.7,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82,
    82,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.2,
    81.2,
    81.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.4,
    81.4,
    81.4,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    83.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    82.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    "",
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.6,
    "",
    81.6,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    "",
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    82.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    81.9,
    81.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.5,
    82.5,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.2,
    82.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82,
    82,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    80.9,
    80.9,
    80.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.4,
    81.4,
    81.4,
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart With an array of array of one value 1`] = `
[
  [
    "Average",
    "Lower limit",
    "Upper limit",
    "Rule 1",
    "Rule 2",
    "Rule 3",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.4,
    82.4,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.6,
    81.6,
    81.6,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.7,
    81.7,
    81.7,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.7,
    81.7,
    81.7,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82,
    82,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.2,
    81.2,
    81.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.4,
    81.4,
    81.4,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    83.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    82.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    "",
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.6,
    "",
    81.6,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    "",
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
    82.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    81.9,
    81.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.5,
    82.5,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.2,
    82.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82,
    82,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    80.9,
    80.9,
    80.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.4,
    81.4,
    81.4,
  ],
]
`;

exports[`Instructions Doesnt fail if the instruction parameters contains less rows than the data one 1`] = `
[
  [
    "Average",
    "Lower limit",
    "Upper limit",
    "Rule 1",
    "Rule 2",
    "Rule 3",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
]
`;

exports[`Instructions Doesnt fail if the instruction parameters contains more rows than the data one 1`] = `
[
  [
    "Average",
    "Lower limit",
    "Upper limit",
    "Rule 1",
    "Rule 2",
    "Rule 3",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
]
`;

exports[`Instructions Doesnt fail if the instruction parameters is missing 1`] = `
[
  [
    "Average",
    "Lower limit",
    "Upper limit",
    "Rule 1",
    "Rule 2",
    "Rule 3",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
    "",
  ],
]
`;

exports[`Instructions Doesnt fail if the instructions contain an unknown instruction 1`] = `
[
  [
    "Average",
    "Lower limit",
    "Upper limit",
    "Rule 1",
    "Rule 2",
    "Rule 3",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
    "",
  ],
]
`;
